[package]
name = "kawk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.1"
getopts = "0.2"
indoc = "2"
rand = "0.8.5"
indexmap = "2.1.0"

[dev-dependencies]
assert_cmd = "1.0"

[profile.release]
opt-level = 3
